// TEAM: unified_shipment_schedules

syntax = "proto3";

package flexport.schedulemanager.manageschedulemetadata.v1beta1;

import "flexport/executioncoordinator/types/query/v1/filters.proto";
import "flexport/schedulemanager/manageschedulemetadata/v1beta1/idewe_action.proto";
import "flexport/schedulemanager/manageschedulemetadata/v1beta1/managed_dates_outcome.proto";
import "flexport/schedulemanager/manageschedulemetadata/v1beta1/tracked_ctdc.proto";

option java_multiple_files = true;
option java_outer_classname = "ManageScheduleMetadataAPIProto";
option java_package = "com.flexport.schedulemanager.manageschedulemetadata.v1beta1";
option ruby_package = "Flexport::ScheduleManager::ManageScheduleMetadata::V1Beta1";

// APIs for fetching outcomes/metadata from Manage Schedule processes.
service ManageScheduleMetadataAPI {
  //  Get a Managed Dates Outcome.
  rpc GetManagedDatesOutcome(GetManagedDatesOutcomeRequest) returns (GetManagedDatesOutcomeResponse);
  //  List Managed Dates Outcomes.
  rpc ListManagedDatesOutcomes(ListManagedDatesOutcomesRequest) returns (ListManagedDatesOutcomesResponse);
  //  Get a Tracked CTDC.
  rpc GetTrackedCtdc(GetTrackedCtdcRequest) returns (GetTrackedCtdcResponse);
  //  List Tracked CTDCs.
  rpc ListTrackedCtdc(ListTrackedCtdcRequest) returns (ListTrackedCtdcResponse);
  //  Get a Idewe Action with list of associated objects (e.g. TrackedCtdc).
  rpc GetAction(GetActionRequest) returns (GetActionResponse);
}

message GetManagedDatesOutcomeRequest {
  string managed_dates_fid = 1;
}
message GetManagedDatesOutcomeResponse {
  ManagedDatesOutcome managed_dates_outcome = 1;
}

message ListManagedDatesOutcomesRequest {
  // The maximum number of entries to return. If a value of zero (the default) is provided, then 100 will be used.
  // If the value provided exceeds 10,000, then 10,000 will be used.
  uint32 limit = 1;
  bool include_evaluations = 3;
  //
  // All filters are "ANDed" together.
  flexport.executioncoordinator.types.query.v1.StringFilter shipment_fid = 2;
}
message ListManagedDatesOutcomesResponse {
  repeated ManagedDatesOutcome managed_dates_outcomes = 1;
}

message GetTrackedCtdcRequest {
  // Can either be the tracked_ctdc_fid or its CTDC's fid
  string fid = 1;
}
message GetTrackedCtdcResponse {
  TrackedCtdc tracked_ctdc = 1;
}

message ListTrackedCtdcRequest {
  // The maximum number of entries to return. If a value of zero (the default) is provided, then 100 will be used.
  // If the value provided exceeds 10,000, then 10,000 will be used.
  uint32 limit = 1;
  bool failed_only = 5;
  //
  // All filters are "ANDed" together.
  flexport.executioncoordinator.types.query.v1.StringFilter shipment_fid = 2;
  flexport.executioncoordinator.types.query.v1.StringFilter action_fid = 3;
  flexport.executioncoordinator.types.query.v1.StringFilter outcome = 4;
}
message ListTrackedCtdcResponse {
  repeated TrackedCtdc tracked_ctdcs = 1;
}

message GetActionRequest {
  string action_fid = 1;
}
message GetActionResponse {
  IdeweAction action = 1;
}
